# SAM-I2VPP

./: .gitignore  README.md  pyproject.toml  setup.py
i2vpp/: build_i2vpp.py  i2vpp_video_predictor.py
i2vpp/configs/: i2vpp-infer.yaml  i2vpp-train.yaml
i2vpp/modeling/: i2vpp_base_infer.py  i2vpp_base_train.py  i2vpp_utils.py  memory_attention_i2vpp.py  memory_encoder_i2vpp.py  position_encoding.py
i2vpp/modeling/backbones/: common.py  image_encoder_i2vpp.py  tfi.py  tiny_vit_sam.py  utils.py
i2vpp/modeling/sam/: mask_decoder_mpg.py  memory_prompt_generator_fg.py  prompt_encoder.py  transformer.py
i2vpp/utils/: amg.py  misc.py  transforms.py
sav_dataset/: README.md  sav_evaluator.py  sav_visualization_example.ipynb
sav_dataset/utils/: sav_benchmark.py  sav_utils.py
test_pvs/: inference_Semi_SAV_mgpu.py  semi_eval.sh  semi_infer.sh  utils.py
tools/: sav_benchmark.py  sav_evaluator.py  save_gt_mask_multiprocess.py  web_annotation_tool.py
train/: loss_fns_i2vpp.py  multi_node_train_4_nodes.sh  optimizer.py  train.py  train.sh  trainer.py
train/dataset/: sam2_datasets.py  transforms.py  utils.py  vos_dataset.py  vos_raw_dataset.py  vos_sampler.py  vos_segment_loader.py
train/model/: i2vpp.py
train/txt/: sa1b_10k_train_list.txt  sav_train_list.txt
train/utils/: checkpoint_utils.py  data_utils.py  distributed.py  logger.py  train_utils.py
